# gc-rs

./: .gitignore  Cargo.toml  LICENSE  flake.nix
.github/workflows/: release.yml
src/: app.rs  handlers.rs  lib.rs  main.rs
