[package]
name = "gc-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["cargo"] }
colored = "2.1.0"
google-calendar3 = "5.0.4"
open = "5.1.2"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
